<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/chats_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar_surface"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="18dp"
        android:paddingRight="16dp"
        android:paddingBottom="14dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/chats_title"
                style="@style/AppScreenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chats" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/profile_button"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_profile_button"
                android:contentDescription="@string/settings"
                android:padding="10dp"
                android:src="@drawable/ic_profile" />
        </RelativeLayout>

        <EditText
            android:id="@+id/chat_search"
            style="@style/AppTextField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_search_field"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/search_chats"
            android:inputType="none"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp"
            android:textColorHint="@color/textSecondary" />
    </LinearLayout>

    <ListView
        android:id="@+id/chats_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/chats_header"
        android:cacheColorHint="@color/background"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="96dp" />

    <Button
        android:id="@+id/new_chat_button"
        style="@style/AppPrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_new_chat_fab"
        android:text="@string/new_chat"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</RelativeLayout>
