<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/input_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_input_panel"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingTop="10dp"
    android:paddingRight="12dp"
    android:paddingBottom="12dp">

    <HorizontalScrollView
        android:id="@+id/attachment_preview_strip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fadeScrollbars="false"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/attachment_preview_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/attach_button"
            style="@style/AppIconButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/select_picture"
            app:srcCompat="@drawable/ic_add" />

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_rounded_bg"
            android:gravity="top|left"
            android:hint="@string/ask_anything"
            android:inputType="textCapSentences|textMultiLine"
            android:lineSpacingExtra="2dp"
            android:maxHeight="144dp"
            android:maxLines="5"
            android:minHeight="44dp"
            android:minLines="1"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp"
            android:scrollbars="vertical"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/send_button"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/send_button_selector"
            android:contentDescription="@string/send_message"
            android:enabled="false"
            android:padding="11dp"
            app:srcCompat="@drawable/ic_arrow_upward" />
    </LinearLayout>
</LinearLayout>
